--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -78,8 +78,8 @@
             })
         })
         .then(response => {
-            if(response.ok) {
-                alert("결제가 완료되었습니다.");
+            if(response.redirected) {
+                window.location.href = response.url;
             } else {
                 alert("결제 실패");
             }
